taking in use new additional identifiers